# Fg-detection-dynamic-background

./: CMakeLists.txt  porownanie.tsv  readme.txt  tables - tables - tables - tables.tsv  tables - tables.tsv  tables.txt
doc/: aghdpl.cls  bibliografia.bib  dodatekA.tex  notatki.tex  praca.loa  praca.tex  rozdzial1.tex  rozdzial2.tex  rozdzial2_2.tex  rozdzial3.tex  rozdzial4.tex  rozdzial5.tex  z_szablonu.tex
source/: CMakeLists.txt  PBAS.cpp  PBAS.h  bgfg_vibe.cpp  bgfg_vibe.hpp  main.cpp
